refactored a couple of class.newInstance() calls